--- a/templates/home.html
+++ b/templates/home.html
@@ -6,7 +6,7 @@
     <title>⭐ Power 4 Web - Accueil ⭐</title>
     <link rel="stylesheet" href="../static/home.css">
 </head>
-<body class="home-page">
+<body class="page-acceuil">
     <!-- Background animé -->
     <div class="background-animation"></div>
     
@@ -163,13 +163,7 @@
                                                     name="player1_color"
                                                     value="#ef4444"
                                                 />
-                                                <button
-                                                    type="button"
-                                                    class="color-random"
-                                                    onclick="randomizeColor('player1')"
-                                                >
-                                                    🎲 Aléatoire
-                                                </button>
+                                               
                                             </div>
 
                                             <div class="color-input-advanced">
